<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalculatorTutorial</string>
    <string name="action_settings">Settings</string>
     <string name="lbl_input">0</string>
    <string name="lbl_btn_0">0</string>
    <string name="lbl_btn_1">1</string>
    <string name="lbl_btn_2">2</string>
    <string name="lbl_btn_3">3</string>
    <string name="lbl_btn_4">4</string>
    <string name="lbl_btn_5">5</string>
    <string name="lbl_btn_6">6</string>
    <string name="lbl_btn_7">7</string>
    <string name="lbl_btn_8">8</string>
    <string name="lbl_btn_9">9</string>
    <string name="lbl_btn_c">clear</string>
    <string name="lbl_btn_dot">.</string>
    <string name="lbl_btn_equals">=</string>
    <string name="lbl_btn_add">+</string>
    <string name="lbl_btn_minus">-</string>
    <string name="lbl_btn_times">*</string>
    <string name="lbl_btn_mul">/</string>
     <string name="lbl_btn_clear">clear</string>

</resources>
