<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:background="#f3f3f3"
        android:padding="11dp"
        android:gravity="right"
        android:hint="@string/lbl_input" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_7"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="14dp"
        android:text="@string/lbl_btn_7" />

    <Button
        android:id="@+id/btn_8"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_7"
        android:layout_toRightOf="@+id/btn_7"
        android:text="@string/lbl_btn_8" />

    <Button
        android:id="@+id/btn_9"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_8"
        android:layout_toRightOf="@+id/btn_8"
        android:text="@string/lbl_btn_9" />

    <Button
        android:id="@+id/btn_4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_7"
        android:text="@string/lbl_btn_4" />

    <Button
        android:id="@+id/btn_5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_8"
        android:layout_alignTop="@+id/btn_4"
        android:text="@string/lbl_btn_5" />

    <Button
        android:id="@+id/btn_6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_5"
        android:layout_toRightOf="@+id/btn_5"
        android:text="@string/lbl_btn_6" />

    <Button
        android:id="@+id/btn_3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_5"
        android:layout_toRightOf="@+id/btn_5"
        android:text="@string/lbl_btn_3" />

    <Button
        android:id="@+id/btn_2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_3"
        android:layout_toRightOf="@+id/btn_4"
        android:text="@string/lbl_btn_2" />

    <Button
        android:id="@+id/btn_1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/btn_2"
        android:text="@string/lbl_btn_1" />

    <Button
        android:id="@+id/btn_0"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_2"
        android:text="@string/lbl_btn_0" />

    <Button
        android:id="@+id/btn_dot"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_0"
        android:layout_toRightOf="@+id/btn_0"
        android:text="@string/lbl_btn_dot" />

    <Button
        android:id="@+id/btn_equals"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_dot"
        android:layout_toRightOf="@+id/btn_dot"
        android:text="@string/lbl_btn_equals" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_9"
        android:layout_toRightOf="@+id/btn_9"
        android:text="@string/lbl_btn_add" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_add"
        android:layout_alignTop="@+id/btn_6"
        android:text="@string/lbl_btn_minus" />

    <Button
        android:id="@+id/btn_times"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_3"
        android:layout_alignBottom="@+id/btn_3"
        android:layout_alignLeft="@+id/btn_add"
        android:text="@string/lbl_btn_times" />

    <Button
        android:id="@+id/btn_mul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_minus"
        android:layout_alignTop="@+id/btn_equals"
        android:text="@string/lbl_btn_mul" />

    <Button
        android:id="@+id/btn_c"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText1"
        android:layout_toRightOf="@+id/editText1"
        android:text="@string/lbl_btn_clear" />

</RelativeLayout>
